# Molt-Farm-Skill-Builder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Skills_Guide.md  compose.yml  molt  pyproject.toml
agents/docker-smoke-worker/: agent.yaml
agents/lesson-extractor-worker/: agent.yaml
agents/log-writer-worker/: agent.yaml
agents/python-builder-worker/: agent.yaml
agents/run-summarizer-worker/: agent.yaml
agents/skill-finder-worker/: agent.yaml
agents/skill-refiner-worker/: agent.yaml
agents/triage-worker/: agent.yaml
apps/control-api/: README.md
experiments/python_testing_bakeoff/: 2026-03-28-report.md  2026-03-29-python-pytest-essentials-followup.md
fishbowl/: .gitignore  AGENTS.md  README.md  opencode.json
lessons/: 2026-03-20-run-summarizer-refinement.md  2026-03-21-docker-smoke-test-refinement.md  2026-03-28-codex-skill-system-harness.md  2026-03-28-conversational-eval-authoring.md  2026-03-28-molt-cli-evals-refinement.md  2026-03-28-python-test-and-coverage-entrypoints.md  2026-03-28-python-test-coverage-loop-skill.md  2026-03-28-python-testing-skill-bakeoff.md  2026-03-28-skill-near-dupe-scanner.md  2026-03-28-targeted-helper-tests-for-coverage.md  2026-03-29-pytest-suite-ceiling-after-grader-hardening.md  2026-04-09-local-gemma-pure-local-pilot.md  2026-04-09-skill-authoring-and-wiki-validation.md  2026-04-09-workflow-first-system-map-from-lessons.md  2026-04-10-fishbowl-scaffold-for-local-opencode.md  2026-04-10-local-opencode-child-handoff-contracts.md
tests/: test_cli.py  test_codex_probe.py  test_eval_authoring.py  test_experimental_codex_corpus.py  test_experimental_codex_probe.py  test_experimental_codex_timeline.py  test_experimental_near_dupe_skills.py  test_fishbowl_scaffold.py  test_operations.py  test_repo_skills.py  test_repo_wiki.py  test_runner.py  test_skill_evals.py  test_skill_evaluator.py  test_skill_loader.py  test_wiki_system_map.py
wiki/: index.md
(+453 files in other folders)
