[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moltfarm-skillbuilder"
version = "0.1.0"
description = "Local-first skill builder for recursively evaluating and improving SKILL.md capabilities"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0",
  "openai-agents>=0.2.0",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]

[project.scripts]
molt = "moltfarm.cli:main"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["moltfarm"]

[tool.coverage.report]
show_missing = true
